--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,5 +11,5 @@
     "isolatedModules": true,
     "skipLibCheck": true
   },
-  "include": ["src"]
+  "include": ["src", "./vitest.config.ts", "./rslib.config.ts"]
 }
