fix: correct capitalization in package.json description

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vite-plugin-version-injection",
   "type": "module",
   "version": "0.0.3",
-  "description": "A Vite plugin that injects version information into your vite based application",
+  "description": "A vite plugin that injects version information into your vite based application",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
